# polza

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
scripts/: check_email_domains.py  generate_emails.py  send_to_telegram.py
