[project]
name = "polza"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiodns>=3.6.0",
    "dnspython>=2.8.0",
    "pycares>=4.11.0",
    "pydantic-settings>=2.12.0",
    "pydantic[email]>=2.12.5",
    "requests>=2.32.5",
]
